kubernetes/container-management.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-management-hybrid
  namespace: elab-hpc
  labels:
    opt: generic-framework-service
spec:
  ports:
  - port: 8073
    protocol: TCP
    targetPort: 8073
  selector:
    k8s-app: container-management-hybrid
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-management-hybrid-deployment
  namespace: elab-hpc
spec:
  selector:
    matchLabels:
      k8s-app: container-management-hybrid
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: container-management-hybrid
    spec:
      containers:
      - name: container-management-hybrid
        image: docker-energylab.iai-artifactory.iai.kit.edu/opt-framework-scheduling-hybrid/container-management-hybrid:latest
        imagePullPolicy: Never
        resources:
          requests:
            cpu: "125m"
          limits:
            cpu: "500m"
        ports:
        - containerPort: 8073
          protocol: TCP
      serviceAccountName: pods-creator
