kubernetes/initializer.yaml
apiVersion: v1
kind: Service
metadata:
  name: initializer-hybrid
  namespace: elab-hpc
  labels:
    opt: generic-framework-service
spec:
  ports:
  - port: 8075
    protocol: TCP
    targetPort: 8075
  selector:
    k8s-app: initializer-hybrid
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: initializer-hybrid-deployment
spec:
  selector:
    matchLabels:
      k8s-app: initializer-hybrid
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: initializer-hybrid
    spec:
      containers:
      - name: initializer-hybrid
        image: docker-energylab.iai-artifactory.iai.kit.edu/opt-framework-scheduling-hybrid/initializer-hybrid:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "125m"
          limits:
            cpu: "500m"
        ports:
        - containerPort: 8075
