kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: energylab
  labels:
    opt: generic-framework-service
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    k8s-app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s_app: redis
  name: redis
  namespace: energylab
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: redis
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: redis
    spec:
      containers:
      - image: redis:4.0.9
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
