kubernetes/splitting-joining.yaml
apiVersion: v1
kind: Service
metadata:
  name: splitting-joining
  namespace: energylab
  labels:
    opt: generic-framework-service
spec:
  ports:
  - port: 8074
    protocol: TCP
    targetPort: 8074
  selector:
    k8s-app: splitting-joining
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitting-joining-deployment
spec:
  selector:
    matchLabels:
      k8s-app: splitting-joining
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: splitting-joining
    spec:
      containers:
      - name: splitting-joining
        image: docker-energylab.iai-artifactory.iai.kit.edu/opt-framework-v1/splitting-joining:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8074
