kubernetes/starter.yaml
apiVersion: v1
kind: Service
metadata:
  name: starter-hybrid
  namespace: energylab
  labels:
    opt: generic-framework-service
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    k8s-app: starter-hybrid
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starter-deployment-hybrid
spec:
  selector:
    matchLabels:
      k8s-app: starter-hybrid
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: starter-hybrid
    spec:
      containers:
      - name: starter-hybrid
        image: docker-energylab.iai-artifactory.iai.kit.edu/opt-framework-scheduling-hybrid/starter-hybrid:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8090
