kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hybrid-ingress
spec:
  rules:
  - host: ea-hybrid.cloud.iai.kit.edu
    http:
      paths:
      - backend:
          serviceName: coordination-hybrid
          servicePort: 8071
